<resources>
    <string name="app_name">Contacts</string>
    <string name="search">Search</string>
    <string name="delete">Delete</string>
    <string name="e_mail">E-mail</string>
    <string name="contact_number">Contact Number</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="address">Address</string>
    <string name="save_text">Save</string>
    <string name="delete_text">Delete</string>
</resources>